kubernetes/laravel/deploymentlaravel.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-laravel
  labels:
    app: laravel
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: mo1074/laravelkube
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "256m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 2
