kubernetes/laravel/svclara.yml
apiVersion: v1
kind: Service
metadata:
  name: service-laravel
  labels:
    app: laravel
spec:
  selector:
    app: laravel
  ports:
  - port: 80
    targetPort: 80
